# Vincent

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
App/: CMakeLists.txt  main.cpp  metatypes_dummy.cpp  metatypes_dummy.h  paletteutils.cpp  paletteutils.h  resources.qrc
App/qml/: CanvasToolBar.qml  DrawingSurface.qml  Main.qml  PainterCanvasPage.qml
docs/: BUILD.md  app_structure.md
mac/: Info.plist.in
packaging/macos/: Info.plist  Vincent_AppStore.provisionprofile
packaging/macos/Vincent.xcassets/AppIcon.appiconset/: Contents.json
